------------
v5.0.0alpha8
------------




------------
v5.0.0alpha7
------------

|+

------------
v5.0.0alpha6
------------

[rla] Applied formal fixes and tentative return types.
|+


------------
v5.0.0alpha5
------------

|+

------------
v5.0.0alpha4
------------

|+

------------
v5.0.0alpha3
------------

|+

------------
v5.0.0alpha2
------------

|+

------------
v5.0.0alpha1
------------

[jan] Make image type column fit any valid media type name.
[jan] Try harder to import attributes that don't match exactly the address book
      configuration (Bug #14673).
[jan] Add API to backup and restore user data.
[jan] Show photos when displaying contacts in calendars.
[jan] Add CLI script to search for invalid email addresses.
[mjr] Remove Facebook driver.
[jan] Add second home and business phone fields to Kolab backend (Thomas
      Jarosch <thomas.jarosch@intra2net.com>, Request #12776).
[jan] Change sort direction of birthday/anniversary year picker (Request
      #11837).
[mjr] Add ability to store original versions of contact photos when resizing
      them for display.
[mjr] Add tag search to advanced search (Request #13693).
[mms] Added the addGroup API method.
[mjr] Add ability to add special characters to the alpha pager.
[jan] Return ETags with browse() API method.
[jan] Support multi-value RDNs in LDAP DN attributes (horde@iotti.biz, Request
      #11889).


-------
v4.2.29
-------

[mjr] Fix regression in accessing virtual address books.


-------
v4.2.28
-------

[mjr] Fix regressions in configuring address book sources.


-------
v4.2.27
-------

[jan] Fix method call when removing user data.


-------
v4.2.26
-------

[jan] SECURITY: Fix remote code execution by an unserialization attack
      (CVE-2022-30287).
[jan] Fix deprecation warnings about each() with PHP 7.2+.
[mjr] Fix setting LDAP_OPT_REFERRALS to 0.
[jan] Fix exporting contacts to LDIF (Bug #14934).


-------
v4.2.25
-------
