@@ -29,56 +29,56 @@
     "time": "2024-01-10",
     "repositories": [],
     "require": {
-        "horde/horde-installer-plugin": "dev-FRAMEWORK_6_0 || ^2",
+        "horde/horde-installer-plugin": "^2",
         "php": "^7.4 || ^8",
-        "horde/content": "^3 || dev-FRAMEWORK_6_0",
-        "horde/horde": "^6 || dev-FRAMEWORK_6_0",
-        "horde/auth": "^3 || dev-FRAMEWORK_6_0",
-        "horde/core": "^3 || dev-FRAMEWORK_6_0",
-        "horde/data": "^3 || dev-FRAMEWORK_6_0",
-        "horde/date": "^3 || dev-FRAMEWORK_6_0",
-        "horde/dav": "^2 || dev-FRAMEWORK_6_0",
-        "horde/exception": "^3 || dev-FRAMEWORK_6_0",
-        "horde/form": "^3 || dev-FRAMEWORK_6_0",
-        "horde/group": "^3 || dev-FRAMEWORK_6_0",
-        "horde/history": "^3 || dev-FRAMEWORK_6_0",
-        "horde/icalendar": "^3 || dev-FRAMEWORK_6_0",
-        "horde/mail": "^3 || dev-FRAMEWORK_6_0",
-        "horde/mime": "^3 || dev-FRAMEWORK_6_0",
-        "horde/nls": "^3 || dev-FRAMEWORK_6_0",
-        "horde/perms": "^3 || dev-FRAMEWORK_6_0",
-        "horde/prefs": "^3 || dev-FRAMEWORK_6_0",
-        "horde/serialize": "^3 || dev-FRAMEWORK_6_0",
-        "horde/share": "^3 || dev-FRAMEWORK_6_0",
-        "horde/support": "^3 || dev-FRAMEWORK_6_0",
-        "horde/url": "^3 || dev-FRAMEWORK_6_0",
-        "horde/util": "^3 || dev-FRAMEWORK_6_0",
-        "horde/vfs": "^3 || dev-FRAMEWORK_6_0",
-        "horde/view": "^3 || dev-FRAMEWORK_6_0",
+        "horde/content": "^3",
+        "horde/horde": "^6",
+        "horde/auth": "^3",
+        "horde/core": "^3",
+        "horde/data": "^3",
+        "horde/date": "^3",
+        "horde/dav": "^2",
+        "horde/exception": "^3",
+        "horde/form": "^3",
+        "horde/group": "^3",
+        "horde/history": "^3",
+        "horde/icalendar": "^3",
+        "horde/mail": "^3",
+        "horde/mime": "^3",
+        "horde/nls": "^3",
+        "horde/perms": "^3",
+        "horde/prefs": "^3",
+        "horde/serialize": "^3",
+        "horde/share": "^3",
+        "horde/support": "^3",
+        "horde/url": "^3",
+        "horde/util": "^3",
+        "horde/vfs": "^3",
+        "horde/view": "^3",
         "ext-gettext": "*",
         "ext-hash": "*",
         "ext-json": "*"
     },
     "require-dev": {
-        "horde/test": "^3 || dev-FRAMEWORK_6_0",
-        "horde/activesync": "^3 || dev-FRAMEWORK_6_0",
-        "horde/backup": "^2 || dev-FRAMEWORK_6_0",
-        "horde/db": "^3 || dev-FRAMEWORK_6_0",
-        "horde/imsp": "^3 || dev-FRAMEWORK_6_0",
-        "horde/kolab_format": "^3 || dev-FRAMEWORK_6_0",
-        "horde/kolab_storage": "^3 || dev-FRAMEWORK_6_0",
-        "horde/ldap": "^3 || dev-FRAMEWORK_6_0",
-        "horde/openxchange": "^2 || dev-FRAMEWORK_6_0"
+        "horde/test": "^3",
+        "horde/activesync": "^3",
+        "horde/backup": "^2",
+        "horde/db": "^3",
+        "horde/imsp": "^3",
+        "horde/kolab_format": "^3",
+        "horde/kolab_storage": "^3",
+        "horde/ldap": "^3",
+        "horde/openxchange": "^2"
     },
     "suggest": {
-        "horde/activesync": "^3 || dev-FRAMEWORK_6_0",
-        "horde/backup": "^2 || dev-FRAMEWORK_6_0",
-        "horde/db": "^3 || dev-FRAMEWORK_6_0",
-        "horde/imsp": "^3 || dev-FRAMEWORK_6_0",
-        "horde/kolab_format": "^3 || dev-FRAMEWORK_6_0",
-        "horde/kolab_storage": "^3 || dev-FRAMEWORK_6_0",
-        "horde/ldap": "^3 || dev-FRAMEWORK_6_0",
-        "horde/openxchange": "^2 || dev-FRAMEWORK_6_0"
+        "horde/activesync": "^3",
+        "horde/backup": "^2",
+        "horde/db": "^3",
+        "horde/imsp": "^3",
+        "horde/kolab_format": "^3",
+        "horde/kolab_storage": "^3",
+        "horde/ldap": "^3",
+        "horde/openxchange": "^2"
     },
     "autoload": {
         "psr-0": {
