@@ -37,9 +37,10 @@
   <release>alpha</release>
   <api>alpha</api>
  </stability>
- <license uri="http://www.horde.org/licenses/apache">ASL</license>
+ <license uri="http://www.horde.org/licenses/apache">Apache-1.1</license>
  <notes>
-* 
+* [rla] Update license identifier ASL to SPDX format - Apache-1.1
+* |+
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -980,136 +981,6 @@
   </filelist>
  </phprelease>
  <changelog>
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
   <release>
    <version>
     <release>0.0.1</release>
@@ -3674,9 +3545,10 @@
     <api>alpha</api>
    </stability>
    <date>2024-01-10</date>
-   <license uri="http://www.horde.org/licenses/apache">ASL</license>
+   <license uri="http://www.horde.org/licenses/apache">Apache-1.1</license>
    <notes>
-* 
+* [rla] Update license identifier ASL to SPDX format - Apache-1.1
+* |+
    </notes>
   </release>
  </changelog>
